syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.imulab.astrea.sdk.flow.cc";
option java_outer_classname = "ClientCredentialsFlowProto";

package flow;

service ClientCredentialsFlow {
    rpc exchange (ClientCredentialsTokenRequest) returns (ClientCredentialsTokenResponse);
}

message ClientCredentialsTokenRequest {
    string id = 1;
    int64 requestTime = 2;
    repeated string grantTypes = 3;
    repeated string scopes = 4;
    Client client = 5;

    message Client {
        string id = 1;
        string type = 2;
        repeated string scopes = 3;
        repeated string grantTypes = 4;
    }
}

message ClientCredentialsTokenResponse {
    bool success = 1;
    TokenPackage data = 2;
    Failure failure = 3;

    message TokenPackage {
        string accessToken = 1;
        string tokenType = 2;
        int64 expiresIn = 3;
        repeated string scopes = 4;
        string refreshToken = 5;
    }

    message Failure {
        string error = 1;
        string description = 2;
        int32 status = 3;
        map<string, string> headers = 4;
    }
}